2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1827829 from Richard West:
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItemLabel): Fixed NPE.

2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYAreaRenderer.java
	(drawItem): Simplified entity generation,
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(drawItem): Likewise.

2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
	(legendShape): New field,
	(XYDotRenderer): Initialise new field,
	(getLegendShape): New method,
	(setLegendShape): Likewise,
	(getLegendItem): New method override,
	(equals): Updated for new field,
	(readObject): New method,
	(writeObject): New method.

2007-11-07  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(paintComponent): Clear refreshBuffer flag before drawing chart.

2007-11-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/DefaultMultiValueCategoryDataset.java
	(getValues): Return EMPTY_LIST rather than null.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/TimeSeries.java
	(TimeSeries(String)): Changed first argument to Comparable,
	(TimeSeries(String, Class)): Likewise,
	(TimeSeries(String, String, String, Class)): Likewise.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
	
	* source/org/jfree/chart/plot/XYPlot.java
	(setFixedDomainAxisSpace): Fire change event,
	(setFixedRangeAxisSpace): Likewise.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1823724 by Richard West:
	* source/org/jfree/chart/renderer/xy/XYDifferenceRenderer.java
	(drawItemPass1): Add code to draw item labels.

2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1823697 by Richard West:
	* source/org/jfree/chart/plot/XYPlot.java